--- a/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.qmd
+++ b/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.qmd
@@ -470,7 +470,7 @@ present_religious_vs_secular <- margot_plot(
   save_path = here::here(push_mods),
   original_df = original_df
 )
-
+n_participants
 
 # religion vs secular: life
 life_religious_vs_secular <- margot_plot(
@@ -505,9 +505,9 @@ social_religious_vs_secular <- margot_plot(
 
 ## Introduction
 
-Religious participation is a core aspect of many cultures, and the question of whether attending religious services influences human well-being is longstanding [@koenig2012handbook; @park2005religion]. Within religious traditions, the belief that religious practices benefit adherents permeates theology, moral teaching, and community life, from Buddhism's emphasis on meditation as a path to enlightenment and reduced suffering, to Christianity's view of prayer and worship as means of spiritual growth and divine connection, to Indigenous spiritual practices that are seen as maintaining harmony between people, nature, and the sacred. More recently, secular empirical research has linked religious service attendance with multiple dimensions of well-being, including social integration, life satisfaction, mental health, and meaning-making [@vanderweele2022invited_church; @chen2020religious; @dunbar2021religiosity; @highland2022national]. These studies have demonstrated that, on average, individuals who attend services report more favourable social and psychological outcomes.
+Religious participation is a core aspect of many cultures, and the question of whether attending religious services influences human well-being is longstanding [@koenig2012handbook; @highland2022national]. Within religious traditions, the belief that religious practices benefit adherents permeates theology, moral teaching, and community life, from Buddhism's emphasis on meditation as a path to enlightenment and reduced suffering, to Christianity's view of prayer and worship as means of spiritual growth and divine connection, to Indigenous spiritual practices that are seen as maintaining harmony between people, nature, and the sacred. More recently, secular empirical research has linked religious service attendance with multiple dimensions of well-being, including social integration, life satisfaction, mental health, and meaning-making [@vanderweele2022invited_church; @chen2020religious; @dunbar2021religiosity; @highland2022national]. These studies have demonstrated that, on average, individuals who attend services report more favourable social and psychological outcomes.
 
-Although some studies have strengthened causal claims through appropriate causal methods [@pawlikowski2019religious; @vanderweele2021effectsReligiousServiceMetanalysis; @vanderweele2020vchenrespond; @vanderweelechurchmortality], concerns about causality persist [@highland2019attitudes]. Many investigations do not fully adjust for baseline health and baseline religious service, or important confounders that shape both religious engagement and well-being [@brown2023_church; @jokela2024_church]. For example, Jokela and Laakasuo’s analysis of four U.S. cohort studies (N=6,592) found that poorer health trajectories came before, rather than followed, religious disengagement. This suggests that declining religious practice might track pre-existing health problems rather than cause them. Similarly, global data from Iyer and Rosso (N=65,564) show that frequent attenders report about five percentage points higher life satisfaction than infrequent attenders; however, this association could reflect unmeasured biases or reverse causation. Chen and colleagues observe that well-being itself is multifaceted, spanning emotional, physical, social, and psychological domains, and that some domains -- such as meaning, purpose, and social connection -- may be more affected than others [@chen2022_church_longitudinal].
+Although some studies have strengthened causal claims through appropriate causal methods [@pawlikowski2019religious; @vanderweele2021effectsReligiousServiceMetanalysis; @vanderweele2020vchenrespond; @vanderweelechurchmortality], concerns about causality persist [@highland2019attitudes]. Many investigations do not fully adjust for baseline health and baseline religious service, or important confounders that shape both religious engagement and well-being [@brown2023_church; @jokela2024_church]. For example, Jokela and Laakasuo’s analysis of four U.S. cohort studies (N=6,592) found that poorer health trajectories came before, rather than followed, religious disengagement. This suggests that declining religious practice might track pre-existing health problems rather than cause them. Similarly, global data from Iyer and Rosso ($N=65,564$) show that frequent attenders report about five percentage points higher life satisfaction than infrequent attenders; however, this association could reflect unmeasured biases or reverse causation. Chen and colleagues observe that well-being itself is multifaceted, spanning emotional, physical, social, and psychological domains, and that some domains -- such as meaning, purpose, and social connection -- may be more affected than others [@chen2022_church_longitudinal].
 
 Despite these efforts, many questions remain. Existing research often relies on non-representative samples or predominantly religious environments, seldom fully addresses time-varying confounding, and rarely considers populations in which religious engagement is relatively low. Brown et al. hypothesise that community-building itself, rather than specifically religious community-building, may drive any observed well-being benefits. Natural-experimental evidence from New Zealand supports this notion [@brown2023_church]. Following the 2010–2011 Christchurch earthquakes, those who maintained or lacked faith reported similar levels of subjective health, whereas those who lost faith showed declines in subjective health [@sibley2012]. These patterns suggest that the community context -- religious or not -- may be critical.
 
@@ -544,7 +544,7 @@ Responses were rounded to the nearest whole number. Because few participants rep
 
 ### Baseline Covariates
 
-We controlled for a broad range of baseline variables measured at Wave 10 (2018–2019) to reduce confounding by demographic, personality, and behavioural factors (see Appendix for full measures). These included age, gender, ethnicity, education level, personality traits (Agreeableness, Conscientiousness, Extraversion, Honesty-Humility, Neuroticism, and Openness), household income, employment status, parenting status, relationship status, religious belonging, and health-related behaviours (e.g. smoking, alcohol use, hours spent exercising). We also controlled for all outcome measures and for religious service attendance at baseline to minimise reverse causation (refer to [Appendix B](appendix-baseline)).
+We controlled for a broad range of baseline variables measured at Wave 10 (2018–2019) to reduce confounding by demographic, personality, and behavioural factors (see Appendix for full measures). These included age, gender, ethnicity, education level, personality traits (Agreeableness, Conscientiousness, Extraversion, Honesty-Humility, Neuroticism, and Openness), household income, employment status, parenting status, relationship status, religious belonging, and health-related behaviours (e.g. smoking, alcohol use, hours spent exercising). We also controlled for all outcome measures and for religious service attendance at baseline to minimise reverse causation (refer to [Appendix B](#appendix-baseline) and [Appendix C](#appendix-confounding)
 
 ### Exposure
 
@@ -563,23 +563,39 @@ We categorised outcomes into five domains—health, psychological well-being, pr
 | Social                    | Belonging, Support, Community                            |
 
 
-Data summaries for all measures used in this study are provided in [Appendix B](appendix-baseline).
+Data summaries for all measures used in this study are provided in [Appendix B](#appendix-baseline).
 
 ## Causal Interventions
 
-When psychologists model time-series data, they often use growth models to quantify patterns of change over time. However, many research questions are causal: we want to know what would happen if we could intervene on certain variables (e.g., religious service attendance). To study these questions using observational time-series data, we must clearly state our causal question. Here, we ask:
+When psychologists analyse time-series data, they often use growth models to describe how variables evolve over time. However, many questions are causal: we want to know what would happen if we could intervene on certain variables (such as religious service attendance). To investigate these questions with observational time-series data, we must clearly define our causal question and design our analysis to emulate a hypothetical randomised controlled trial—often called a **target trial** [@hernan2016]. A target trial asks, setting aside practicalities and ethics, *what experiment are we attempting to emulate with our data?* Without explicitly stating this hypothetical experiment, it can be unclear which causal effect we are actually estimating.
+
+Here, we ask:
 
 > "What if, at each wave, we intervened to set religious service attendance to a certain level, and then measured everyone's well-being at the final wave?"
 
-We compare two hypothetical interventions that alter religious service attendance over four exposure waves (Waves 1–4), with outcomes measured at Wave 5, and controlling for a rich set of baseline covariates measured at Wave 0. In line with the modified treatment policies literature, we define **shift functions** to describe each regime. 
+To answer this, we compare two hypothetical interventions. Each intervention shifts religious service attendance across four exposure waves (Waves 1–4), with outcomes measured at Wave 5. We control for a rich set of baseline covariates (from Wave 0) and time-varying confounders. By using the six most recent NZAVS waves (Waves 10–15), we maximise sample size and statistical power.
+
+Following the modified treatment policies approach, we define **shift functions** describing each intervention:
 
 1. **Regular Religious Service Attendance**  
-   At each wave, if a person's attendance is below four times per month, we shift it up to four; otherwise, we leave it unchanged.
+   At each wave, if attendance is below four times per month, we shift it to four; otherwise, we leave it unchanged.
 
 2. **No Religious Service Attendance**  
-   At each wave, if a person's attendance is above zero, we shift it down to zero; otherwise, we leave it unchanged.
+   At each wave, if attendance is above zero, we shift it to zero; otherwise, we leave it unchanged.
 
-A confounder is a variable that when included in the the model, removes any non-causal association between a 'treatment' and 'outcome'. Here, we adjust for important confounders at the baseline wave (Wave 0). We also adjust for the following time-varying confounders at each wave: physical disability, employment, partner status, and parenting status. These factors may, independently of baseline measurements, influence both attendance at each wave and later outcomes.
+We then organise our data to resemble a randomised experiment that assigns each person to one of these two strategies, clearly specifying the treatment plans, timing of interventions, assignment procedures, and analysis plan to account for confounders.
+
+A **confounder** is a variable that, once included in the model, removes any spurious association between the treatment and outcome. In our study, we adjust for key confounders measured at baseline (Wave 0), such as demographic factors, personality traits, and prior well-being. We also adjust for time-varying confounders at each wave (physical disability, employment status, partner status, and parenting status). These factors can influence both religious service attendance and later well-being, thus potentially biasing our estimates.
+
+By adopting the target trial framework and leveraging the six most recent NZAVS waves, we aim to rigorously estimate the causal effects of religious service attendance on multi-dimensional well-being. @tbl-plan shows the two sequential treatments we contrast: one in which everyone attends religious services regularly for four years, and one in which no one attends religious services for four years. We adjust for confounders at baseline and in each subsequent wave. We ensure there is no reverse causation by measuring the outcomes at the end of study, one year after the final treatment wave. By setting up our data as if it came from a hypothetical experiment, we gain clarity about which causal effects we are estimating and as well as confidence about our causal effect estimates (refer to @hernan2024WHATIF, @bulbulia2022; @bulbulia2023).
+
+::: {#tbl-plan}
+```{=latex}
+\vizfive
+```
+We contrast well-being outcomes from two treatment regimes: (1) regular attendance for four years; and (2) no service attendance for four years. We control for baseline confounders in the first wave and time-varying confounders in the follow up waves. These are variables that when modelled, allow treatment assignment to be "as good as random." Outcomes are measured in the wave following the final treatment.
+:::
+
 
 ### Notation
 
@@ -590,12 +606,12 @@ A confounder is a variable that when included in the the model, removes any non-
 
 ### Shift Functions
 
-Let $\boldsymbol{d}(a_k)^+$ represent the **regular attendance** treatment sequence and $\boldsymbol{d}(a_k)^-$ the **no attendance** treatment sequence, where the interventions occure at each wave $k = 1\dots 4$. Formally:
+Let $\boldsymbol{\text{d}}(a_k)^+$ represent the **regular attendance** treatment sequence and $\boldsymbol{\text{d}}(a_k)^-$ the **no attendance** treatment sequence, where the interventions occure at each wave $k = 1\dots 4; k\in \{0\dots 5\}$. Formally:
 
-#### Regular Attendance Regime $\bigl(\boldsymbol{d}(a_k^+)\bigr)$
+#### Regular Attendance Regime $\bigl(\boldsymbol{\text{d}}(a_k^+)\bigr)$
 
 $$
-\boldsymbol{d}(a_k^+) 
+\boldsymbol{\text{d}} (a_k^+) 
 \;=\; 
 \begin{cases}
 4, & \text{if } A_k < 4,\\[6pt]
@@ -603,10 +619,10 @@ A_k, & \text{otherwise.}
 \end{cases}
 $$
 
-#### No Attendance Regime $\bigl(\boldsymbol{d}(a_k^-)\bigr)$
+#### No Attendance Regime $\bigl(\boldsymbol{\text{d}}(a_k^-)\bigr)$
 
 $$
-\boldsymbol{d}(a_k^-) 
+\boldsymbol{\text{d}}(a_k^-) 
 \;=\; 
 \begin{cases}
 0, & \text{if } A_k > 0,\\[6pt]
@@ -614,57 +630,27 @@ A_k, & \text{otherwise.}
 \end{cases}
 $$
 
-Here, $A_k$ is the observed attendance at Wave $k$. The shift function $\boldsymbol{d}$ 'nudges' $A_k$ to a target level (four times per month or zero) only if the current value is below (for regular attendance) or above (for no attendance) that target. Across the four waves, these shifts form a sequence $\boldsymbol{\bar{d}}$, which defines a complete intervention regime.
-
-
-::: {#tbl-intervention}
-```{=latex}
-\tvtable
-```
-Causal diagrams showing sources of bias in a three wave panel study.
-:::
+Here, $A_k$ is the observed attendance at Wave $k$. The shift function $\boldsymbol{\text{d}}$ "nudges" $A_k$ to a target level (four times per month or zero) only if the current value is below (for regular attendance) or above (for no attendance) that target. Across the four waves, these shifts form a sequence $\boldsymbol{\bar{\boldsymbol{\text{d}}}}$, which defines a complete intervention regime.
 
 
 ### Causal Contrast
 
-We compare the average well-being under the **regular attendance** regime, $\boldsymbol{\bar{d}}(a^+)$, to the average well-being under the **no attendance** regime, $\boldsymbol{\bar{d}}(a^-)$. Specifically, the average treatment effect (ATE) is given:
+We compare the average well-being under the **regular attendance** regime, $\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^+)$, to the average well-being under the **no attendance** regime, $\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^-)$. Specifically, the average treatment effect (ATE) is given:
 
 $$
 \text{ATE}^{\text{wellbeing}} 
 \;=\; 
 \mathbb{E}
 \Bigl[
-  Y_\tau\!\bigl(\boldsymbol{\bar{d}}(a^+)\bigr) 
+  Y_\tau\!\bigl(\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^+)\bigr) 
   \;-\; 
-  Y_\tau\!\bigl(\boldsymbol{\bar{d}}(a^-)\bigr)
+  Y_\tau\!\bigl(\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^-)\bigr)
 \Bigr].
 $$
 
-### Assumptions
+We estimate this average treatment effect for each of outcome across five well-being domains under the assumptions of no-unmeasured confounding, causal-consistency, and positivity (refer to [Appendix D](#appendix-assumptions) and [Appendix E](#appendix-positivity).
 
-To estimate this effect from observational data, we assume:
-
-1. **Conditional Exchangeability:** Once we condition on $W_0$ and each $L_k$, the interventions $\boldsymbol{\bar{d}}(a^+)$ or $\boldsymbol{\bar{d}}(a^-)$ are effectively random with respect to potential outcomes.
-2. **Consistency:** The potential outcome under a given regime matches the observed outcome when that regime is actually followed.
-3. **Positivity:** Everyone has a non-zero probability of receiving each level of attendance (i.e., a chance to be 'shifted' up or down) given their covariates.
-
-Mathematically, for conditional exchangeability, we write:
-
-$$
-\Bigl\{
-  Y\bigl(\boldsymbol{d}(a^+)\bigr), 
-  \; 
-  Y\bigl(\boldsymbol{d}(a^-)\bigr)
-\Bigr\}
-\coprod
-A_k |
-L_k,
-W_0.
-$$
-
-Under these assumptions, our statistical models permit us to estimate $\text{ATE}^{\text{wellbeing}}$ from observational data. Again, that contrast is 'regularly attend religious service at least four wave' versus 'never attend religious service at least four waves'.  Finally, we define the target population as the New Zealand Population from 2019-2024, the years in which measurements were taken. 
-
-Although both growth models and causal inference methods can inform changes over time, they focus on different questions. Growth models quantify how individuals vary in their natural trajectories. In contrast, causal models explicitly ask: "What happens if we intervene?" By defining hypothetical interventions, adjusting for confounders, and specifying assumptions, researchers can rigorously address "what if" questions, bridging the gap between observational data and actionable insights. This approach opens new avenues for psychological scientists to design and evaluate interventions that might guide policy and practice with evidence.
+Notice that although both growth models and causal inference methods pertain to questions about changes over time, they focus on different questions. Growth models quantify how individuals vary in their natural trajectories. In contrast, causal models explicitly ask: "What happens if we intervene?" By defining hypothetical interventions, adjusting for confounders, and specifying assumptions, researchers can rigorously address "what if" questions, bridging the gap between observational data and actionable insights. This approach opens new avenues for psychological scientists to design and evaluate interventions that might guide policy and practice with evidence 
 
 ### Statistical Estimator
 
@@ -836,17 +822,22 @@ cat(social_religious_vs_secular$interpretation)
 {{< pagebreak >}}
 ## Discussion
 
-Our findings suggest that regular religious service attendance can modestly enhance meaning, gratitude, and sexual satisfaction. Yet, our analysis also underscores the challenges of making strong causal claims in observational settings. The absence of consistent or robust evidence for many hypothesised effects does not mean that such effects do not exist. Uncertainty arises not only from possible residual confounding, but also from the likelihood that non-directed measurement error biases effects toward the null. In other words, failures to detect a relationship might owe to limitations in our measures rather than to a genuine absence of effect.
+Our findings suggest that regular religious service attendance can modestly enhance meaning, gratitude, and sexual satisfaction in New Zealand. Yet, our analysis also underscores the challenges of making strong causal claims in observational settings. The absence of consistent or robust evidence for many hypothesised effects does not mean that such effects do not exist. Uncertainty arises not only from possible residual confounding, but also from the likelihood that non-directed measurement error biases effects toward the null. In other words, failures to detect a relationship might owe to limitations in our measures rather than to a genuine absence of effect.
 
-A further caveat is that causal effect estimates reflect a hypothetical scenario in which the entire target population either consistently attends services or never attends. This population-level contrast represents an average treatment effect; we have not examined how the causal effects of religious service attendance vary by faith tradition, intensity of belief, or cultural context. Such studies involve changing the target population from everyone to members of specific population strata or group. Moroever, at an individual level, different people will respond differently to religious behaviours, and we assume that people often know themselves best. Our findings project an average treatment effect of the adult population of New Zealand, which should not be confused with life advice.
+A further caveat is that causal effect estimates reflect a hypothetical scenario in which the entire target population either consistently attends services or never attends. 
+This population-level contrast represents an average treatment effect; we have not examined how the causal effects of religious service attendance vary by faith tradition, intensity of belief, or cultural context. Such studies involve changing the target population from everyone to members of specific population strata or group.
 
-One of our most robust findings is that religious engagement increases a sense of meaning and sense of purpose. Why this should be so remains speculative. Evolutionary accounts might question why, if meaning and purpose are biologically desirable, they are not universal 'default' states of consciousness. Why would the time and material investments of religious service attendance require our attention [@sosis2003cooperation]? Some scholars suggest that religious healing might function as a hard-to-fake signal that validates religious commitments, rather than as an evolutionary end in itself [@bulbulia2006nature]. Any evolutionary or functional explanations for why religious practice boosts meaning presently remains speculative, and must reckon with the complex cultural and biological processes that have given rise to and conserved the religions of our day.
+Moreover, we have focussed on continual religious service attendance versus no attendance, corresponding to interest in much of the religion well-being literature. Yet, there are many other causal contrasts that one could estimate at the population or subpopulation level. For instance, one might explore "conversion" or "reconversion" by examining how well-being differs if people regularly attend for two waves before ceasing, or if non-attenders begin attending. We might also limit the analysis to sub-populations for whom shifting attendance is more realistic (e.g., those already identifying as religious). Because potential interventions and populations are innumerable, referring generally to the "causal effects of religious service" risks vagueness. Although we cannot emulate all possible hypothetical experiments in one study, framing causal questions as target trials clarifies the interventions and the populations of interest. Future research could investigate different causal questions and heterogeneity across different groups.
 
-Closely related to meaning is the finding that religious engagement fosters gratitude. In classical Christian thought dating at least to Aquinas, religion is framed as a virtue of justice called 'piety', which entails rightly acknowledging the sources of one's existence and sustenance as a debt that cannot be repaid [@bulbulia2023understanding]. In a modern idiom, one might refer to this virtue a 'gratitude'. Indeed, the rehearsal of gratitude is a prominent feature not only of Christian religious service but of most religious traditions [@mccullough2001gratitude; @bono2004gratitude]. It has been hypothesised that active attention to gratitude in religious faith serves to foster prosociality, which, if confirmed, would help to explain the durability of this result to robust causal estimation workflows that controls for confounding.
+A final caveat is that, at an individual level, different people will respond differently to religious behaviours. Our findings project an average treatment effect of the adult population of New Zealand, which should not be confused with life advice.
 
-The positive causal association we observe between religious attendance and sexual satisfaction also raises intriguing questions. Prior research has documented associations between religiosity and marital sexual satisfaction [@dew2020joint], although these studies rely on cross-sectional data and cannot reliably infer causation. In line with that correlational literature, however, we find that religious service attendance causes modest improvements in sexual satisfaction, effects that remain after controlling for baseline values of both indicators. One possible explanation is that religious activities help align values, enhance communication, and foster stable social support networks within couples, thereby strengthening intimacy. Such intimacy is especially valuable for parenting—described as the ultimate cooperation problem because it involves demanding commitments that link biological fates [@bulbulia2015]. Yet there may be non-social mechanisms at work as well, and in general, the intersection of sex and religion remains under-examined [though see @shaver2020church; @shaver2024religious; @shaver2022integrating].
+One of our most robust findings is that religious engagement increases a sense of meaning and sense of purpose. Why this should be so remains speculative. Evolutionary accounts might question why, if meaning and purpose are biologically desirable, they are not universal "default" states of consciousness. Why would the time and material investments of religious service attendance require our attention [@sosis2003cooperation]? Some scholars suggest that religious healing might function as a hard-to-fake signal that validates religious commitments, rather than as an evolutionary end in itself [@bulbulia2006nature]. Any evolutionary or functional explanations for why religious practice boosts meaning presently remains speculative, and must reckon with the complex cultural and biological processes that have given rise to and conserved the religions of our day.
 
-In conclusion, our results indicate that religious service attendance can enhance certain facets of well-being, particularly meaning and purpose, gratitude, and sexual satisfaction. These findings hold even in a secular-majority country. However, we find little evidence of broad effects on other well-being outcomes. Future research should focus on fine-grained analyses of heterogeneity in these effects, explore mechanistic pathways that explain how religius service affects well-being, and remain mindful that individual experience often resists sweeping generalisations, whether religious or otherwise, and that such benefits, or the absence of such benefits, will not hold for everyone equally.
+Closely related to meaning is the finding that religious engagement fosters gratitude. In classical Christian thought dating at least to Aquinas, religion is framed as a virtue of justice called "piety," which entails rightly acknowledging the sources of one's existence and sustenance as a debt that cannot be repaid [@bulbulia2023understanding]. In a modern idiom, one might refer to this virtue a *gratitude*. Indeed, the rehearsal of gratitude is a prominent feature not only of Christian religious service but of most religious traditions [@mccullough2001gratitude; @bono2004gratitude]. It has been hypothesised that active attention to gratitude in religious faith serves to foster prosociality, which, if confirmed, would help to explain the durability of this result to robust causal estimation workflows that controls for confounding.
+
+The positive causal association we observe between religious attendance and sexual satisfaction also raises intriguing questions. Prior research has documented associations between religiosity and marital sexual satisfaction [@dew2020joint]. Although these studies rely on cross-sectional data, and as such cannot reliably infer causal magnitudes, our results nevertheless suggest that religious service attendance causes modest improvements in sexual satisfaction.  These effects remain after controlling for baseline values of both indicators. There are many possible explanations: religious service might help align values, enhance communication, and foster stable social support networks within couples, thereby strengthening intimacy and trust, and reduce conflict. From a functional perspective, such intimacy and trust would be especially valuable for parenting -- the "ultimate cooperation problem" that links biological fates [@Bulbulia_2015]. However, a darker-side to such cooperation might be sexual inequality [@deak2021individuals], matters for future investigations, within the emerging field of religion, sex, and parenting (refer to @shaver2020church; @shaver2024religious; @shaver2022integrating).
+
+Overall, our results indicate that religious service attendance can enhance certain facets of well-being, particularly meaning and purpose, gratitude, and sexual satisfaction. These findings hold even in a secular-majority country. However, we find little evidence of broad effects on other well-being outcomes. Future research should focus on fine-grained analyses of heterogeneity in these effects, explore mechanistic pathways that explain how religius service affects well-being, and remain mindful that individual experience often resists sweeping generalisations, whether religious or otherwise, and that such benefits, or the absence of such benefits, will not hold for everyone equally.
 
 
 ### Ethics
@@ -875,28 +866,27 @@ All authors had input into the manuscript. JB did the analysis and developed the
 
 {{< pagebreak >}}
 
-## New Zealand Attitudes and Values Study Data Collection (2018 retained cohort) {#appendix-daily} 
+@fig-timeline presents the New Zealand Attitudes and Values Study Data Collection (2018 retained cohort).
 
 ```{r}
 #| label: fig-timeline
-#| fig-cap: "Historgram of New Zealand Attitudes and Values Study Daily Data Collection: Time 11 - Time 15."
+#| fig-cap: "Historgram of New Zealand Attitudes and Values Study Daily Data Collection for Time 10 cohort: years 2018-2024."
 #| eval: true
 #| include: true
 #| echo: false
 #| fig-width: 12
 #| fig-height: 12
 #| 
-
-
 timeline_histogram
 ```
 
 
 {{< pagebreak >}}
+
 ## Appendix B: Measures and Demographic Statistics {#appendix-baseline}
 
 
-## Measures 
+### Measures 
 
 ```{r, results='asis'}
 cat(appendix_text_version_1)
@@ -1114,13 +1104,14 @@ Life-reflective well-being variables measured at baseline (NZAVS time 10, years 
 
 
 {{< pagebreak >}}
-## Appendix C: Confouding Control 
 
-::: {#tbl-02}
+## Appendix C: Confouding Control {#appendix-confounding}
+
+::: {#tbl-C}
 ```{=latex}
 \tvtable
 ```
-Causal diagrams showing sources of bias in a three wave panel study.
+@tbl-C presents single World intervention graphs showing time-fixed and time-varying sources of bias in our six wave (baseline, four exposure waves, followed by the outcome wave.) Time-fixed confounders are included in the baseline wave. Time-varying confounders are included in each of four treatment waves (abbreviated here by '$\dots$' to declutter the graph). When there is more than one exposure wave, identifying causal effects requires adjustment for time-varying confounders [@robins2008estimation; @bulbulia2024swigstime; @richardson2013].
 :::
 
 For confounding control, we employ a modified disjunctive cause criterion [@vanderweele2019], which involves:
@@ -1131,14 +1122,46 @@ For confounding control, we employ a modified disjunctive cause criterion [@vand
 3.	Including proxies for unmeasured confounders affecting both exposure and outcome.
 4.	Controlling for baseline exposure and baseline outcome, serving as proxies for unmeasured common causes [@vanderweele2020].
 
+Additionally, we control for time-varying confounders at each exposure wave [@robins2008estimation; @bulbulia2024swigstime; @richardson2013].
 
-The covariates included for confounding control are detailed in @table-exposure. This list adheres to the guidelines provided in [@bulbulia2024PRACTICAL] and were pre-specified in our study protocol [https://osf.io/ce4t9/](https://osf.io/ce4t9/). 
 
-Where there are multiple exposures, causal inference may be threatened by time-varying confounding [@bulbulia_2024_swig_time]. 
+The covariates included for confounding control are described in [Appendix B](#appendix-baseline) This list adheres to the guidelines provided in [@bulbulia2024PRACTICAL] and were pre-specified in our study protocol [https://osf.io/ce4t9/](https://osf.io/ce4t9/). 
+
+Where there are multiple exposures, causal inference may be threatened by time-varying confounding [@bulbulia2024swigstime]. 
 
 {{< pagebreak >}}
 
-## Appendix D Transition Matrix to Verify Positivity Assumption {#appendix-transition}
+## Appendix D: Causal Assumptions {#appendix-assumptions}
+
+
+### Assumptions
+
+To estimate this effect from observational data, we assume:
+
+1. **Conditional Exchangeability:** Once we condition on $W_0$ and each $L_k$, the interventions $\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^+)$ or $\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^-)$ are effectively random with respect to potential outcomes.
+2. **Consistency:** The potential outcome under a given regime matches the observed outcome when that regime is actually followed.
+3. **Positivity:** Everyone has a non-zero probability of receiving each level of attendance (i.e., a chance to be "shifted" up or down) given their covariates. The positivity assumption is the only causal assumption that can be evaluated with data. We evaluate this assumption in [Appendix E](#appendix-transition).
+
+Mathematically, for conditional exchangeability, we write:
+
+$$
+\Bigl\{
+  Y\bigl(\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^+)\bigr), 
+  \; 
+  Y\bigl(\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^-)\bigr)
+\Bigr\}
+\coprod
+A_k |
+L_k,
+W_0.
+$$
+
+Under these assumptions, our statistical models permit us to estimate $\text{ATE}^{\text{wellbeing}}$ from observational data. That contrast is "regularly attend religious service at least four wave" versus "never attend religious service at least four waves."  We define the target population as the New Zealand Population from 2019-2024, the years in which measurements were taken. 
+
+
+{{< pagebreak >}}
+
+## Appendix E: Transition Matrix to Check The Positivity Assumption {#appendix-transition}
 
 
 ```{r, results = 'asis'}
