--- a/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.tex
+++ b/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.tex
@@ -268,7 +268,7 @@ University of Wellington
       
 
 
-\date{2024-12-22}
+\date{2024-12-23}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -301,19 +301,20 @@ benefits. \textbf{KEYWORDS}: \emph{Causal Inference}; \emph{Church};
 
 Religious participation is a core aspect of many cultures, and the
 question of whether attending religious services influences human
-well-being is longstanding (\citeproc{ref-koenig2012handbook}{Koenig
-\emph{et al.} 2012}; \citeproc{ref-park2005religion}{Park 2005}). Within
-religious traditions, the belief that religious practices benefit
-adherents permeates theology, moral teaching, and community life, from
-Buddhism's emphasis on meditation as a path to enlightenment and reduced
-suffering, to Christianity's view of prayer and worship as means of
-spiritual growth and divine connection, to Indigenous spiritual
-practices that are seen as maintaining harmony between people, nature,
-and the sacred. More recently, secular empirical research has linked
-religious service attendance with multiple dimensions of well-being,
-including social integration, life satisfaction, mental health, and
-meaning-making (\citeproc{ref-chen2020religious}{Chen \emph{et al.}
-2020}; \citeproc{ref-dunbar2021religiosity}{Dunbar 2021};
+well-being is longstanding (\citeproc{ref-highland2022national}{Highland
+\emph{et al.} 2022}; \citeproc{ref-koenig2012handbook}{Koenig \emph{et
+al.} 2012}). Within religious traditions, the belief that religious
+practices benefit adherents permeates theology, moral teaching, and
+community life, from Buddhism's emphasis on meditation as a path to
+enlightenment and reduced suffering, to Christianity's view of prayer
+and worship as means of spiritual growth and divine connection, to
+Indigenous spiritual practices that are seen as maintaining harmony
+between people, nature, and the sacred. More recently, secular empirical
+research has linked religious service attendance with multiple
+dimensions of well-being, including social integration, life
+satisfaction, mental health, and meaning-making
+(\citeproc{ref-chen2020religious}{Chen \emph{et al.} 2020};
+\citeproc{ref-dunbar2021religiosity}{Dunbar 2021};
 \citeproc{ref-highland2022national}{Highland \emph{et al.} 2022};
 \citeproc{ref-vanderweele2022invited_church}{VanderWeele \emph{et al.}
 2022}). These studies have demonstrated that, on average, individuals
@@ -337,7 +338,7 @@ U.S. cohort studies (N=6,592) found that poorer health trajectories came
 before, rather than followed, religious disengagement. This suggests
 that declining religious practice might track pre-existing health
 problems rather than cause them. Similarly, global data from Iyer and
-Rosso (N=65,564) show that frequent attenders report about five
+Rosso (\(N=65,564\)) show that frequent attenders report about five
 percentage points higher life satisfaction than infrequent attenders;
 however, this association could reflect unmeasured biases or reverse
 causation. Chen and colleagues observe that well-being itself is
@@ -462,7 +463,8 @@ parenting status, relationship status, religious belonging, and
 health-related behaviours (e.g.~smoking, alcohol use, hours spent
 exercising). We also controlled for all outcome measures and for
 religious service attendance at baseline to minimise reverse causation
-(refer to \href{appendix-baseline}{Appendix B}).
+(refer to \hyperref[appendix-baseline]{Appendix B} and
+\hyperref[appendix-confounding]{Appendix C}
 
 \subsubsection{Exposure}\label{exposure}
 
@@ -505,16 +507,24 @@ Social & Belonging, Support, Community \\
 \end{longtable}
 
 Data summaries for all measures used in this study are provided in
-\href{appendix-baseline}{Appendix B}.
+\hyperref[appendix-baseline]{Appendix B}.
 
 \subsection{Causal Interventions}\label{causal-interventions}
 
-When psychologists model time-series data, they often use growth models
-to quantify patterns of change over time. However, many research
+When psychologists analyse time-series data, they often use growth
+models to describe how variables evolve over time. However, many
 questions are causal: we want to know what would happen if we could
-intervene on certain variables (e.g., religious service attendance). To
-study these questions using observational time-series data, we must
-clearly state our causal question. Here, we ask:
+intervene on certain variables (such as religious service attendance).
+To investigate these questions with observational time-series data, we
+must clearly define our causal question and design our analysis to
+emulate a hypothetical randomised controlled trial---often called a
+\textbf{target trial} (\citeproc{ref-hernan2016}{Hernán \emph{et al.}
+2016}). A target trial asks, setting aside practicalities and ethics,
+\emph{what experiment are we attempting to emulate with our data?}
+Without explicitly stating this hypothetical experiment, it can be
+unclear which causal effect we are actually estimating.
+
+Here, we ask:
 
 \begin{quote}
 ``What if, at each wave, we intervened to set religious service
@@ -522,31 +532,75 @@ attendance to a certain level, and then measured everyone's well-being
 at the final wave?''
 \end{quote}
 
-We compare two hypothetical interventions that alter religious service
-attendance over four exposure waves (Waves 1--4), with outcomes measured
-at Wave 5, and controlling for a rich set of baseline covariates
-measured at Wave 0. In line with the modified treatment policies
-literature, we define \textbf{shift functions} to describe each regime.
+To answer this, we compare two hypothetical interventions. Each
+intervention shifts religious service attendance across four exposure
+waves (Waves 1--4), with outcomes measured at Wave 5. We control for a
+rich set of baseline covariates (from Wave 0) and time-varying
+confounders. By using the six most recent NZAVS waves (Waves 10--15), we
+maximise sample size and statistical power.
+
+Following the modified treatment policies approach, we define
+\textbf{shift functions} describing each intervention:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
   \textbf{Regular Religious Service Attendance}\\
-  At each wave, if a person's attendance is below four times per month,
-  we shift it up to four; otherwise, we leave it unchanged.
+  At each wave, if attendance is below four times per month, we shift it
+  to four; otherwise, we leave it unchanged.
 \item
   \textbf{No Religious Service Attendance}\\
-  At each wave, if a person's attendance is above zero, we shift it down
-  to zero; otherwise, we leave it unchanged.
+  At each wave, if attendance is above zero, we shift it to zero;
+  otherwise, we leave it unchanged.
 \end{enumerate}
 
-A confounder is a variable that when included in the the model, removes
-any non-causal association between a `treatment' and `outcome'. Here, we
-adjust for important confounders at the baseline wave (Wave 0). We also
-adjust for the following time-varying confounders at each wave: physical
-disability, employment, partner status, and parenting status. These
-factors may, independently of baseline measurements, influence both
-attendance at each wave and later outcomes.
+We then organise our data to resemble a randomised experiment that
+assigns each person to one of these two strategies, clearly specifying
+the treatment plans, timing of interventions, assignment procedures, and
+analysis plan to account for confounders.
+
+A \textbf{confounder} is a variable that, once included in the model,
+removes any spurious association between the treatment and outcome. In
+our study, we adjust for key confounders measured at baseline (Wave 0),
+such as demographic factors, personality traits, and prior well-being.
+We also adjust for time-varying confounders at each wave (physical
+disability, employment status, partner status, and parenting status).
+These factors can influence both religious service attendance and later
+well-being, thus potentially biasing our estimates.
+
+By adopting the target trial framework and leveraging the six most
+recent NZAVS waves, we aim to rigorously estimate the causal effects of
+religious service attendance on multi-dimensional well-being.
+Table~\ref{tbl-plan} shows the two sequential treatments we contrast:
+one in which everyone attends religious services regularly for four
+years, and one in which no one attends religious services for four
+years. We adjust for confounders at baseline and in each subsequent
+wave. We ensure there is no reverse causation by measuring the outcomes
+at the end of study, one year after the final treatment wave. By setting
+up our data as if it came from a hypothetical experiment, we gain
+clarity about which causal effects we are estimating and as well as
+confidence about our causal effect estimates (refer to Hernan and Robins
+(\citeproc{ref-hernan2024WHATIF}{2024}), Bulbulia
+(\citeproc{ref-bulbulia2022}{2023a}); Bulbulia
+(\citeproc{ref-bulbulia2023}{2024c})).
+
+\begin{table}
+
+\caption{\label{tbl-plan}We contrast well-being outcomes from two
+treatment regimes: (1) regular attendance for four years; and (2) no
+service attendance for four years. We control for baseline confounders
+in the first wave and time-varying confounders in the follow up waves.
+These are variables that when modelled, allow treatment assignment to be
+``as good as random.'' Outcomes are measured in the wave following the
+final treatment.}
+
+\centering{
+
+\vizfive
+
+}
+
+\end{table}%
 
 \subsubsection{Notation}\label{notation}
 
@@ -566,16 +620,16 @@ attendance at each wave and later outcomes.
 
 \subsubsection{Shift Functions}\label{shift-functions}
 
-Let \(\boldsymbol{d}(a_k)^+\) represent the \textbf{regular attendance}
-treatment sequence and \(\boldsymbol{d}(a_k)^-\) the \textbf{no
-attendance} treatment sequence, where the interventions occure at each
-wave \(k = 1\dots 4\). Formally:
+Let \(\boldsymbol{\text{d}}(a_k)^+\) represent the \textbf{regular
+attendance} treatment sequence and \(\boldsymbol{\text{d}}(a_k)^-\) the
+\textbf{no attendance} treatment sequence, where the interventions
+occure at each wave \(k = 1\dots 4; k\in \{0\dots 5\}\). Formally:
 
 \paragraph{\texorpdfstring{Regular Attendance Regime
-\(\bigl(\boldsymbol{d}(a_k^+)\bigr)\)}{Regular Attendance Regime \textbackslash bigl(\textbackslash boldsymbol\{d\}(a\_k\^{}+)\textbackslash bigr)}}\label{regular-attendance-regime-biglboldsymbolda_kbigr}
+\(\bigl(\boldsymbol{\text{d}}(a_k^+)\bigr)\)}{Regular Attendance Regime \textbackslash bigl(\textbackslash boldsymbol\{\textbackslash text\{d\}\}(a\_k\^{}+)\textbackslash bigr)}}\label{regular-attendance-regime-biglboldsymboltextda_kbigr}
 
 \[
-\boldsymbol{d}(a_k^+) 
+\boldsymbol{\text{d}} (a_k^+) 
 \;=\; 
 \begin{cases}
 4, & \text{if } A_k < 4,\\[6pt]
@@ -584,10 +638,10 @@ A_k, & \text{otherwise.}
 \]
 
 \paragraph{\texorpdfstring{No Attendance Regime
-\(\bigl(\boldsymbol{d}(a_k^-)\bigr)\)}{No Attendance Regime \textbackslash bigl(\textbackslash boldsymbol\{d\}(a\_k\^{}-)\textbackslash bigr)}}\label{no-attendance-regime-biglboldsymbolda_k-bigr}
+\(\bigl(\boldsymbol{\text{d}}(a_k^-)\bigr)\)}{No Attendance Regime \textbackslash bigl(\textbackslash boldsymbol\{\textbackslash text\{d\}\}(a\_k\^{}-)\textbackslash bigr)}}\label{no-attendance-regime-biglboldsymboltextda_k-bigr}
 
 \[
-\boldsymbol{d}(a_k^-) 
+\boldsymbol{\text{d}}(a_k^-) 
 \;=\; 
 \begin{cases}
 0, & \text{if } A_k > 0,\\[6pt]
@@ -596,95 +650,48 @@ A_k, & \text{otherwise.}
 \]
 
 Here, \(A_k\) is the observed attendance at Wave \(k\). The shift
-function \(\boldsymbol{d}\) `nudges' \(A_k\) to a target level (four
-times per month or zero) only if the current value is below (for regular
-attendance) or above (for no attendance) that target. Across the four
-waves, these shifts form a sequence \(\boldsymbol{\bar{d}}\), which
-defines a complete intervention regime.
-
-\begin{table}
-
-\caption{\label{tbl-intervention}Causal diagrams showing sources of bias
-in a three wave panel study.}
-
-\centering{
-
-\tvtable
-
-}
-
-\end{table}%
+function \(\boldsymbol{\text{d}}\) ``nudges'' \(A_k\) to a target level
+(four times per month or zero) only if the current value is below (for
+regular attendance) or above (for no attendance) that target. Across the
+four waves, these shifts form a sequence
+\(\boldsymbol{\bar{\boldsymbol{\text{d}}}}\), which defines a complete
+intervention regime.
 
 \subsubsection{Causal Contrast}\label{causal-contrast}
 
 We compare the average well-being under the \textbf{regular attendance}
-regime, \(\boldsymbol{\bar{d}}(a^+)\), to the average well-being under
-the \textbf{no attendance} regime, \(\boldsymbol{\bar{d}}(a^-)\).
-Specifically, the average treatment effect (ATE) is given:
+regime, \(\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^+)\), to the
+average well-being under the \textbf{no attendance} regime,
+\(\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^-)\). Specifically, the
+average treatment effect (ATE) is given:
 
 \[
 \text{ATE}^{\text{wellbeing}} 
 \;=\; 
 \mathbb{E}
 \Bigl[
-  Y_\tau\!\bigl(\boldsymbol{\bar{d}}(a^+)\bigr) 
+  Y_\tau\!\bigl(\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^+)\bigr) 
   \;-\; 
-  Y_\tau\!\bigl(\boldsymbol{\bar{d}}(a^-)\bigr)
+  Y_\tau\!\bigl(\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^-)\bigr)
 \Bigr].
 \]
 
-\subsubsection{Assumptions}\label{assumptions}
+We estimate this average treatment effect for each of outcome across
+five well-being domains under the assumptions of no-unmeasured
+confounding, causal-consistency, and positivity (refer to
+\hyperref[appendix-assumptions]{Appendix D} and
+\hyperref[appendix-positivity]{Appendix E}.
 
-To estimate this effect from observational data, we assume:
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  \textbf{Conditional Exchangeability:} Once we condition on \(W_0\) and
-  each \(L_k\), the interventions \(\boldsymbol{\bar{d}}(a^+)\) or
-  \(\boldsymbol{\bar{d}}(a^-)\) are effectively random with respect to
-  potential outcomes.
-\item
-  \textbf{Consistency:} The potential outcome under a given regime
-  matches the observed outcome when that regime is actually followed.
-\item
-  \textbf{Positivity:} Everyone has a non-zero probability of receiving
-  each level of attendance (i.e., a chance to be `shifted' up or down)
-  given their covariates.
-\end{enumerate}
-
-Mathematically, for conditional exchangeability, we write:
-
-\[
-\Bigl\{
-  Y\bigl(\boldsymbol{d}(a^+)\bigr), 
-  \; 
-  Y\bigl(\boldsymbol{d}(a^-)\bigr)
-\Bigr\}
-\coprod
-A_k |
-L_k,
-W_0.
-\]
-
-Under these assumptions, our statistical models permit us to estimate
-\(\text{ATE}^{\text{wellbeing}}\) from observational data. Again, that
-contrast is `regularly attend religious service at least four wave'
-versus `never attend religious service at least four waves'. Finally, we
-define the target population as the New Zealand Population from
-2019-2024, the years in which measurements were taken.
-
-Although both growth models and causal inference methods can inform
-changes over time, they focus on different questions. Growth models
-quantify how individuals vary in their natural trajectories. In
-contrast, causal models explicitly ask: ``What happens if we
-intervene?'' By defining hypothetical interventions, adjusting for
+Notice that although both growth models and causal inference methods
+pertain to questions about changes over time, they focus on different
+questions. Growth models quantify how individuals vary in their natural
+trajectories. In contrast, causal models explicitly ask: ``What happens
+if we intervene?'' By defining hypothetical interventions, adjusting for
 confounders, and specifying assumptions, researchers can rigorously
 address ``what if'' questions, bridging the gap between observational
 data and actionable insights. This approach opens new avenues for
 psychological scientists to design and evaluate interventions that might
-guide policy and practice with evidence.
+guide policy and practice with evidence
 
 \subsubsection{Statistical Estimator}\label{statistical-estimator}
 
@@ -1058,15 +1065,15 @@ for causality.
 \subsection{Discussion}\label{discussion}
 
 Our findings suggest that regular religious service attendance can
-modestly enhance meaning, gratitude, and sexual satisfaction. Yet, our
-analysis also underscores the challenges of making strong causal claims
-in observational settings. The absence of consistent or robust evidence
-for many hypothesised effects does not mean that such effects do not
-exist. Uncertainty arises not only from possible residual confounding,
-but also from the likelihood that non-directed measurement error biases
-effects toward the null. In other words, failures to detect a
-relationship might owe to limitations in our measures rather than to a
-genuine absence of effect.
+modestly enhance meaning, gratitude, and sexual satisfaction in New
+Zealand. Yet, our analysis also underscores the challenges of making
+strong causal claims in observational settings. The absence of
+consistent or robust evidence for many hypothesised effects does not
+mean that such effects do not exist. Uncertainty arises not only from
+possible residual confounding, but also from the likelihood that
+non-directed measurement error biases effects toward the null. In other
+words, failures to detect a relationship might owe to limitations in our
+measures rather than to a genuine absence of effect.
 
 A further caveat is that causal effect estimates reflect a hypothetical
 scenario in which the entire target population either consistently
@@ -1075,16 +1082,34 @@ represents an average treatment effect; we have not examined how the
 causal effects of religious service attendance vary by faith tradition,
 intensity of belief, or cultural context. Such studies involve changing
 the target population from everyone to members of specific population
-strata or group. Moroever, at an individual level, different people will
-respond differently to religious behaviours, and we assume that people
-often know themselves best. Our findings project an average treatment
-effect of the adult population of New Zealand, which should not be
-confused with life advice.
+strata or group.
+
+Moreover, we have focussed on continual religious service attendance
+versus no attendance, corresponding to interest in much of the religion
+well-being literature. Yet, there are many other causal contrasts that
+one could estimate at the population or subpopulation level. For
+instance, one might explore ``conversion'' or ``reconversion'' by
+examining how well-being differs if people regularly attend for two
+waves before ceasing, or if non-attenders begin attending. We might also
+limit the analysis to sub-populations for whom shifting attendance is
+more realistic (e.g., those already identifying as religious). Because
+potential interventions and populations are innumerable, referring
+generally to the ``causal effects of religious service'' risks
+vagueness. Although we cannot emulate all possible hypothetical
+experiments in one study, framing causal questions as target trials
+clarifies the interventions and the populations of interest. Future
+research could investigate different causal questions and heterogeneity
+across different groups.
+
+A final caveat is that, at an individual level, different people will
+respond differently to religious behaviours. Our findings project an
+average treatment effect of the adult population of New Zealand, which
+should not be confused with life advice.
 
 One of our most robust findings is that religious engagement increases a
 sense of meaning and sense of purpose. Why this should be so remains
 speculative. Evolutionary accounts might question why, if meaning and
-purpose are biologically desirable, they are not universal `default'
+purpose are biologically desirable, they are not universal ``default''
 states of consciousness. Why would the time and material investments of
 religious service attendance require our attention
 (\citeproc{ref-sosis2003cooperation}{Sosis and Bressler 2003})? Some
@@ -1098,11 +1123,11 @@ to and conserved the religions of our day.
 
 Closely related to meaning is the finding that religious engagement
 fosters gratitude. In classical Christian thought dating at least to
-Aquinas, religion is framed as a virtue of justice called `piety', which
-entails rightly acknowledging the sources of one's existence and
+Aquinas, religion is framed as a virtue of justice called ``piety,''
+which entails rightly acknowledging the sources of one's existence and
 sustenance as a debt that cannot be repaid
-(\citeproc{ref-bulbulia2023understanding}{Bulbulia 2023}). In a modern
-idiom, one might refer to this virtue a `gratitude'. Indeed, the
+(\citeproc{ref-bulbulia2023understanding}{Bulbulia 2023b}). In a modern
+idiom, one might refer to this virtue a \emph{gratitude}. Indeed, the
 rehearsal of gratitude is a prominent feature not only of Christian
 religious service but of most religious traditions
 (\citeproc{ref-bono2004gratitude}{Bono \emph{et al.} 2004};
@@ -1115,28 +1140,30 @@ workflows that controls for confounding.
 The positive causal association we observe between religious attendance
 and sexual satisfaction also raises intriguing questions. Prior research
 has documented associations between religiosity and marital sexual
-satisfaction (\citeproc{ref-dew2020joint}{Dew \emph{et al.} 2020}),
-although these studies rely on cross-sectional data and cannot reliably
-infer causation. In line with that correlational literature, however, we
-find that religious service attendance causes modest improvements in
-sexual satisfaction, effects that remain after controlling for baseline
-values of both indicators. One possible explanation is that religious
-activities help align values, enhance communication, and foster stable
-social support networks within couples, thereby strengthening intimacy.
-Such intimacy is especially valuable for parenting---described as the
-ultimate cooperation problem because it involves demanding commitments
-that link biological fates
-(\citeproc{ref-bulbulia2015}{\textbf{bulbulia2015?}}). Yet there may be
-non-social mechanisms at work as well, and in general, the intersection
-of sex and religion remains under-examined (though see
-\citeproc{ref-shaver2020church}{Shaver \emph{et al.} 2020},
-\citeproc{ref-shaver2024religious}{2024};
-\citeproc{ref-shaver2022integrating}{Shaver and White 2022}).
+satisfaction (\citeproc{ref-dew2020joint}{Dew \emph{et al.} 2020}).
+Although these studies rely on cross-sectional data, and as such cannot
+reliably infer causal magnitudes, our results nevertheless suggest that
+religious service attendance causes modest improvements in sexual
+satisfaction. These effects remain after controlling for baseline values
+of both indicators. There are many possible explanations: religious
+service might help align values, enhance communication, and foster
+stable social support networks within couples, thereby strengthening
+intimacy and trust, and reduce conflict. From a functional perspective,
+such intimacy and trust would be especially valuable for parenting --
+the ``ultimate cooperation problem'' that links biological fates
+(\citeproc{ref-Bulbulia_2015}{Bulbulia \emph{et al.} 2015}). However, a
+darker-side to such cooperation might be sexual inequality
+(\citeproc{ref-deak2021individuals}{Deak \emph{et al.} 2021}), matters
+for future investigations, within the emerging field of religion, sex,
+and parenting (refer to Shaver \emph{et al.}
+(\citeproc{ref-shaver2020church}{2020}); Shaver \emph{et al.}
+(\citeproc{ref-shaver2024religious}{2024}); Shaver and White
+(\citeproc{ref-shaver2022integrating}{2022})).
 
-In conclusion, our results indicate that religious service attendance
-can enhance certain facets of well-being, particularly meaning and
-purpose, gratitude, and sexual satisfaction. These findings hold even in
-a secular-majority country. However, we find little evidence of broad
+Overall, our results indicate that religious service attendance can
+enhance certain facets of well-being, particularly meaning and purpose,
+gratitude, and sexual satisfaction. These findings hold even in a
+secular-majority country. However, we find little evidence of broad
 effects on other well-being outcomes. Future research should focus on
 fine-grained analyses of heterogeneity in these effects, explore
 mechanistic pathways that explain how religius service affects
@@ -1184,8 +1211,8 @@ obtained funding.
 
 \newpage{}
 
-\subsection{New Zealand Attitudes and Values Study Data Collection (2018
-retained cohort)}\label{appendix-daily}
+Figure~\ref{fig-timeline} presents the New Zealand Attitudes and Values
+Study Data Collection (2018 retained cohort).
 
 \begin{figure}
 
@@ -1196,7 +1223,7 @@ retained cohort)}\label{appendix-daily}
 }
 
 \caption{\label{fig-timeline}Historgram of New Zealand Attitudes and
-Values Study Daily Data Collection: Time 11 - Time 15.}
+Values Study Daily Data Collection for Time 10 cohort: years 2018-2024.}
 
 \end{figure}%
 
@@ -1205,7 +1232,7 @@ Values Study Daily Data Collection: Time 11 - Time 15.}
 \subsection{Appendix B: Measures and Demographic
 Statistics}\label{appendix-baseline}
 
-\subsection{Measures}\label{measures}
+\subsubsection{Measures}\label{measures}
 
 \subsection{Baseline Variables}\label{baseline-variables}
 
@@ -2508,13 +2535,21 @@ variables measured at baseline (NZAVS time 10, years 2018-2019, and time
 
 \newpage{}
 
-\subsection{Appendix C: Confouding
-Control}\label{appendix-c-confouding-control}
+\subsection{Appendix C: Confouding Control}\label{appendix-confounding}
 
 \begin{table}
 
-\caption{\label{tbl-02}Causal diagrams showing sources of bias in a
-three wave panel study.}
+\caption{\label{tbl-C}Table~\ref{tbl-C} presents single World
+intervention graphs showing time-fixed and time-varying sources of bias
+in our six wave (baseline, four exposure waves, followed by the outcome
+wave.) Time-fixed confounders are included in the baseline wave.
+Time-varying confounders are included in each of four treatment waves
+(abbreviated here by `\(\dots\)' to declutter the graph). When there is
+more than one exposure wave, identifying causal effects requires
+adjustment for time-varying confounders
+(\citeproc{ref-bulbulia2024swigstime}{Bulbulia 2024d};
+\citeproc{ref-richardson2013}{Richardson and Robins 2013};
+\citeproc{ref-robins2008estimation}{Robins and Hernan 2008}).}
 
 \centering{
 
@@ -2545,19 +2580,73 @@ involves:
   (\citeproc{ref-vanderweele2020}{VanderWeele \emph{et al.} 2020}).
 \end{enumerate}
 
-The covariates included for confounding control are detailed in
-(\citeproc{ref-table-exposure}{\textbf{table-exposure?}}). This list
-adheres to the guidelines provided in
-(\citeproc{ref-bulbulia2024PRACTICAL}{Bulbulia 2024a}) and were
-pre-specified in our study protocol \url{https://osf.io/ce4t9/}.
+Additionally, we control for time-varying confounders at each exposure
+wave (\citeproc{ref-bulbulia2024swigstime}{Bulbulia 2024d};
+\citeproc{ref-richardson2013}{Richardson and Robins 2013};
+\citeproc{ref-robins2008estimation}{Robins and Hernan 2008}).
+
+The covariates included for confounding control are described in
+\hyperref[appendix-baseline]{Appendix B} This list adheres to the
+guidelines provided in (\citeproc{ref-bulbulia2024PRACTICAL}{Bulbulia
+2024a}) and were pre-specified in our study protocol
+\url{https://osf.io/ce4t9/}.
 
 Where there are multiple exposures, causal inference may be threatened
 by time-varying confounding
-(\citeproc{ref-bulbulia_2024_swig_time}{\textbf{bulbulia\_2024\_swig\_time?}}).
+(\citeproc{ref-bulbulia2024swigstime}{Bulbulia 2024d}).
 
 \newpage{}
 
-\subsection{Appendix D Transition Matrix to Verify Positivity
+\subsection{Appendix D: Causal Assumptions}\label{appendix-assumptions}
+
+\subsubsection{Assumptions}\label{assumptions}
+
+To estimate this effect from observational data, we assume:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  \textbf{Conditional Exchangeability:} Once we condition on \(W_0\) and
+  each \(L_k\), the interventions
+  \(\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^+)\) or
+  \(\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^-)\) are effectively
+  random with respect to potential outcomes.
+\item
+  \textbf{Consistency:} The potential outcome under a given regime
+  matches the observed outcome when that regime is actually followed.
+\item
+  \textbf{Positivity:} Everyone has a non-zero probability of receiving
+  each level of attendance (i.e., a chance to be ``shifted'' up or down)
+  given their covariates. The positivity assumption is the only causal
+  assumption that can be evaluated with data. We evaluate this
+  assumption in \hyperref[appendix-transition]{Appendix E}.
+\end{enumerate}
+
+Mathematically, for conditional exchangeability, we write:
+
+\[
+\Bigl\{
+  Y\bigl(\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^+)\bigr), 
+  \; 
+  Y\bigl(\boldsymbol{\bar{\boldsymbol{\text{d}}}}(a^-)\bigr)
+\Bigr\}
+\coprod
+A_k |
+L_k,
+W_0.
+\]
+
+Under these assumptions, our statistical models permit us to estimate
+\(\text{ATE}^{\text{wellbeing}}\) from observational data. That contrast
+is ``regularly attend religious service at least four wave'' versus
+``never attend religious service at least four waves.'' We define the
+target population as the New Zealand Population from 2019-2024, the
+years in which measurements were taken.
+
+\newpage{}
+
+\subsection{Appendix E: Transition Matrix to Check The Positivity
 Assumption}\label{appendix-transition}
 
 \begin{longtable}[]{@{}cccccc@{}}
@@ -2630,8 +2719,14 @@ Bulbulia, J (2006) Nature's medicine: Religiosity as an adaptation for
 health and cooperation. \emph{Where God and Science Meet}, \textbf{1},
 87--121.
 
+\bibitem[\citeproctext]{ref-bulbulia2022}
+Bulbulia, JA (2023a) A workflow for causal inference in cross-cultural
+psychology. \emph{Religion, Brain \& Behavior}, \textbf{13}(3),
+291--306.
+doi:\href{https://doi.org/10.1080/2153599X.2022.2070245}{10.1080/2153599X.2022.2070245}.
+
 \bibitem[\citeproctext]{ref-bulbulia2023understanding}
-Bulbulia, JA (2023) Understanding the relationship between science and
+Bulbulia, JA (2023b) Understanding the relationship between science and
 religion using bayes' theorem. \emph{Studies in Christian Ethics},
 \textbf{36}(4), 866--878.
 
@@ -2649,6 +2744,18 @@ doi:\href{https://doi.org/10.5281/zenodo.10907724}{10.5281/zenodo.10907724}.
 Bulbulia, JA (2024c) Methods in causal inference part 1: Causal diagrams
 and confounding. \emph{Evolutionary Human Sciences}, \textbf{6}, e40.
 doi:\href{https://doi.org/10.1017/ehs.2024.35}{10.1017/ehs.2024.35}.
+
+\bibitem[\citeproctext]{ref-bulbulia2024swigstime}
+Bulbulia, JA (2024d) Methods in causal inference part 2: Interaction,
+mediation, and time-varying treatments. \emph{Evolutionary Human
+Sciences}, \textbf{6}, e41.
+doi:\href{https://doi.org/10.1017/ehs.2024.32}{10.1017/ehs.2024.32}.
+
+\bibitem[\citeproctext]{ref-Bulbulia_2015}
+Bulbulia, JA, Shaver, JH, Greaves, L, Sosis, R, and Sibley, CG (2015)
+Religion and parental cooperation: An empirical test of slone's sexual
+signaling model. In S. J. D. amd Van Slyke J., ed., \emph{The attraction
+of religion: A sexual selectionist account}, Bloomsbury Press, 29--62.
 
 \bibitem[\citeproctext]{ref-buysse1989pittsburgh}
 Buysse, DJ, Reynolds III, CF, Monk, TH, Berman, SR, and Kupfer, DJ
@@ -2689,6 +2796,11 @@ doi:\href{https://doi.org/10.1023/A:1024704320683}{10.1023/A:1024704320683}.
 Cutrona, CE, and Russell, DW (1987) The provisions of social
 relationships and adaptation to stress. \emph{Advances in Personal
 Relationships}, \textbf{1}, 37--67.
+
+\bibitem[\citeproctext]{ref-deak2021individuals}
+Deak, CK, Hammond, MD, Sibley, CG, and Bulbulia, J (2021) Individuals'
+number of children is associated with benevolent sexism. \emph{PloS
+One}, \textbf{16}(5), e0252194.
 
 \bibitem[\citeproctext]{ref-dew2020joint}
 Dew, JP, Uecker, JE, and Willoughby, BJ (2020) Joint religiosity and
@@ -2749,6 +2861,12 @@ Content guide 2012-2013}, Princeton University Press.
 Hernan, MA, and Robins, JM (2024) \emph{Causal inference: What if?},
 Taylor \& Francis. Retrieved from
 \url{https://www.hsph.harvard.edu/miguel-hernan/causal-inference-book/}
+
+\bibitem[\citeproctext]{ref-hernan2016}
+Hernán, MA, Sauer, BC, Hernández-Díaz, S, Platt, R, and Shrier, I (2016)
+Specifying a target trial prevents immortal time bias and other
+self-inflicted injuries in observational analyses. \emph{Journal of
+Clinical Epidemiology}, \textbf{79}, 70--75.
 
 \bibitem[\citeproctext]{ref-highland2019attitudes}
 Highland, BR, Troughton, G, Shaver, J, Barrett, JL, Sibley, CG, and
@@ -2837,10 +2955,6 @@ shapes interpersonal behavior: Low relationship power predicts men's
 aggressive responses to low situational power. \emph{Journal of
 Personality and Social Psychology}, \textbf{111}(2), 195.
 
-\bibitem[\citeproctext]{ref-park2005religion}
-Park, CL (2005) Religion as a meaning-making framework in coping with
-life stress. \emph{Journal of Social Issues}, \textbf{61}(4), 707--729.
-
 \bibitem[\citeproctext]{ref-pawlikowski2019religious}
 Pawlikowski, J, Białowolski, P, Węziak-Białowolska, D, and VanderWeele,
 TJ (2019) Religious service attendance, health behaviors and
@@ -2862,6 +2976,16 @@ Rice, KG, Richardson, CME, and Tueller, S (2014) The short form of the
 revised almost perfect scale. \emph{Journal of Personality Assessment},
 \textbf{96}(3), 368--379.
 doi:\href{https://doi.org/10.1080/00223891.2013.838172}{10.1080/00223891.2013.838172}.
+
+\bibitem[\citeproctext]{ref-richardson2013}
+Richardson, TS, and Robins, JM (2013) Single world intervention graphs:
+A primer. In, Citeseer. Retrieved from
+\url{https://core.ac.uk/display/102673558}
+
+\bibitem[\citeproctext]{ref-robins2008estimation}
+Robins, J, and Hernan, M (2008) Estimation of the causal effects of
+time-varying exposures. \emph{Chapman \& Hall/CRC Handbooks of Modern
+Statistical Methods}, 553--599.
 
 \bibitem[\citeproctext]{ref-Rosenberg1965}
 Rosenberg, M (1965) \emph{Society and the adolescent self-image},
